change to node version

--- a/themes/wdfn_theme/layouts/partials/header.html
+++ b/themes/wdfn_theme/layouts/partials/header.html
@@ -17,5 +17,16 @@
         <div class="usa-logo">
             <img alt="USGS Home" src="{{ $.Site.BaseURL }}img/USGS_logo.svg" />
         </div>
+        <button class="usa-menu-btn">Menu</button>
     </div>
+    <nav role="navigation" class="usa-nav">
+        <div class="usa-nav-inner">
+            <button class="usa-nav-close"><img src="{{ $.Site.BaseURL }}img/close.svg" alt="close"></button>
+            <ul class="usa-nav-primary usa-accordion">
+                <li class="usa-nav-primary-item">
+                    <a class="usa-nav-link" href="{{ $.Site.BaseURL }}">Water Data Labs</a>
+                </li>
+            </ul>
+        </div>
+   </nav>
 </header>
