--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -26,6 +26,9 @@
                 <li class="usa-nav-primary-item">
                     <a class="usa-nav-link" href="{{ $.Site.BaseURL }}">Water Data Labs</a>
                 </li>
+                <li class="usa-nav-primary-item">
+                  <a class="usa-nav-link" href="{{ $.Site.BaseURL }}about/">About</a>
+                </li>
             </ul>
         </div>
    </nav>
