Completed updates for wdfn-viz latest

--- a/themes/wdfn_theme/layouts/partials/footer.html
+++ b/themes/wdfn_theme/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="usa-footer usa-footer-slim" role="contentinfo">
+<footer class="usa-footer usa-footer--slim" role="contentinfo">
   <div class="usgs-footer-container">
     <div class="usgs-footer-nav">
       <a class="usgs-footer-link" href="https://www.doi.gov/privacy">DOI Privacy Policy</a> |
