Fixed header adding link for about page. Removed unused header style from main.scss

--- a/themes/wdfn_theme/layouts/partials/header.html
+++ b/themes/wdfn_theme/layouts/partials/header.html
@@ -63,6 +63,9 @@
                     <li class="usa-nav__primary-item">
                         <a class="usa-nav__link" href="{{ $.Site.BaseURL }}">Water Data Labs</a>
                     </li>
+                    <li class="usa-nav__primary-item">
+                        <a class="usa-nav__link" href="{{ $.Site.BaseURL }}/about/index.html">About</a>
+                    </li>
                 </ul>
             </div>
         </nav>
