--- a/themes/wdfn_theme/layouts/_default/baseof.html
+++ b/themes/wdfn_theme/layouts/_default/baseof.html
@@ -14,17 +14,10 @@
       <title>{{ .Title }}</title>
       <meta property='og:title' content="{{ .Title }}">
       <meta property="og:type" content="website">
-      <meta property='twitter:title' content="{{ .Title }}">
     {{ else }}
       <title>{{ .Title }} - {{ .Site.Title }}</title>
-      <meta property='og:title' content="{{ .Title }} - {{ .Site.Title }}">
-
-      {{ with .Params.image }}
-        <meta property="og:type" content="summary_large_image">
-      {{ else }}
-        <meta property="og:type" content="article">
-      {{ end }}
-
+      <meta property="og:title" content="{{ .Title }} - {{ .Site.Title }}">
+      <meta property="og:type" content="website">
       <meta property='twitter:title' content="{{ .Title }} - {{ .Site.Title }}">
     {{ end }}
 
@@ -32,11 +25,10 @@
       <meta name="description" content="{{ . }}">
       <meta name="twitter:description" content="{{ . }}">
     {{ else }}
-      <meta name="description" content="Blog of new development for USGS_WaterData">
-      <meta name="twitter:description" content="Blog of new development for USGS_WaterData">
+      <meta name="description" content="Website for new services and experimental web sites for USGS Water Data">
+      <meta name="twitter:description" content="Website for new services and experimental web sites for USGS Water Data">
     {{ end }}
 
-    <meta name="twitter:summary_large_image" content="summary" />
     <meta name="twitter:site" content="@USGS_WaterData" />
     <meta property="og:url" content="{{ .Permalink }}" />
     <meta property="og:image" name="twitter:image" content="{{ $.Site.BaseURL }}{{ with .Params.image }}{{ . }}{{ else }}img/USGS_logo.svg{{ end }}">
@@ -53,19 +45,6 @@
       ga('require', 'eventTracker');
     </script>
     <script async src="https://www.google-analytics.com/analytics.js"></script>
-
-    <script>
-      function toggle_visibility(id) {
-          var e = document.getElementById(id);
-          if (e.style.display == 'block' || e.style.display=='') e.style.display = 'none';
-          else e.style.display = 'block';
-      }
-    </script>
-
-    {{ if .RSSLink }}
-      <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-      <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
-    {{ end }}
 
     <script async src="{{ $.Site.BaseURL }}scripts/bundle.js"></script>
   </head>
