--- a/themes/wdfn_theme/layouts/_default/baseof.html
+++ b/themes/wdfn_theme/layouts/_default/baseof.html
@@ -3,14 +3,14 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
-    {{ .Hugo.Generator }}
+    {{ hugo.Generator }}
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="icon" href="{{ $.Site.BaseURL }}img/main/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css">
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ .Site.BaseURL }}index.xml">
     <link rel="alternate" type="application/atom+xml" title="{{ .Site.Title }}" href="{{ .Site.BaseURL }}index.xml">
 
-    {{ if eq .URL "/" }}
+    {{ if eq .RelPermalink "/" }}
       <title>{{ .Title }}</title>
       <meta property='og:title' content="{{ .Title }}">
       <meta property="og:type" content="website">
