--- a/themes/wdfn_theme/layouts/partials/header.html
+++ b/themes/wdfn_theme/layouts/partials/header.html
@@ -4,7 +4,7 @@
         <header class="usa-banner__header">
             <div class="usa-banner__inner">
                 <div class="grid-col-auto">
-                    <img class="usa-banner__header-flag" src="{{ $.Site.BaseURL }}img/favicons/favicon-57.png" alt="U.S. flag">
+                    <img class="usa-banner__header-flag" src="{{ $.Site.BaseURL }}img/us_flag_small.png" alt="U.S. flag">
                 </div>
                 <div class="grid-col-fill tablet:grid-col-auto">
                     <p class="usa-banner__header-text">An official website of the United States government</p>
@@ -64,7 +64,7 @@
                         <a class="usa-nav__link" href="{{ $.Site.BaseURL }}">Water Data Labs</a>
                     </li>
                     <li class="usa-nav__primary-item">
-                        <a class="usa-nav__link" href="{{ $.Site.BaseURL }}/about/index.html">About</a>
+                        <a class="usa-nav__link" href="{{ $.Site.BaseURL }}about/index.html">About</a>
                     </li>
                 </ul>
             </div>
