Added meta data files required by USGS software policy

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <h1>Welcome to Water Data Labs</h1>
+  <h1>Welcome to My Water Data Labs</h1>
   <p>Water Data Labs is an experimental  site that exposes tools and technologies in development by the USGS Water Data for the Nation software team. Here, users can explore and test experimental products before they are incorporated into production systems. Some of the services, tools and visualizations that seen here will eventually make to the core <a href="https://waterdata.usgs.gov">waterdata.usgs.gov</a> or <a href="https://waterservices.usgs.gov">waterservices.usgs.gov</a> sites, but some may not.</p>
 
   <p>Examples of products hosted on this site include:</p>
