various content updates

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,9 @@
 {{ define "main" }}
   <h1>Welcome to Water Data Labs</h1>
-  <p>Water Data Labs is an experimental  site that exposes tools and technologies in development by the USGS Water Data for the Nation software team. Here, users can explore and test experimental products before they are incorporated into production systems. Some of the services, tools and visualizations that seen here will eventually make to the core <a href="https://waterdata.usgs.gov">waterdata.usgs.gov</a> or <a href="https://waterservices.usgs.gov">waterservices.usgs.gov</a> sites, but some may not.</p>
+<p>Water Data Labs is an experimental  site that exposes tools and technologies in development by the USGS Water Data for the Nation software team.</p>
+    <p>Users can explore and test experimental products on labs before they are incorporated into production systems. Some of the services, tools and visualizations that seen here will eventually make to the core <a href="https://waterdata.usgs.gov">waterdata.usgs.gov</a> or <a href="https://waterservices.usgs.gov">waterservices.usgs.gov</a> sites, but some may not.</p>
 
-  <p>Examples of products hosted on this site include:</p>
+  <p>Products hosted on waterdata labs will include:</p>
 
   <ul>
   <li><p>Web services that do not have a stable API</p></li>
