--- a/themes/wdfn_theme/src/styles/main.scss
+++ b/themes/wdfn_theme/src/styles/main.scss
@@ -3,3 +3,92 @@
 pre {
   overflow-y: scroll
 }
+
+// Grabbing bits and pieces of SCSS from the USGS website so that we can use their roadmap template
+// source: https://github.com/uswds/uswds-site/blob/c74497541c96eb21f1f24484e35ec87b536728ed/css/_uswds-theme-custom-styles.scss
+
+.site-roadmap-list,
+.site-roadmap-list__sublist {
+  @include add-list-reset;
+}
+
+.site-roadmap-list {
+  @include u-margin-top(2);
+}
+
+.site-roadmap-list__item,
+.site-roadmap-list__subitem {
+  @include u-border-top(1px);
+  @include u-line-height("lang", 3);
+  @include u-padding-top(0.5);
+  @include u-margin-top(0.5);
+  @include u-display("flex");
+  @include u-flex("wrap", "align-start");
+}
+
+.site-roadmap-list__item {
+  @include u-border-top("ink");
+  @include u-text("bold");
+
+  .usa-tag {
+    @include u-flex("auto");
+  }
+}
+
+.site-roadmap-list__sublist {
+  @include u-width("full");
+
+  .site-roadmap-list__item {
+    @include u-border-top("base-lighter");
+    @include u-text("normal");
+  }
+}
+
+
+.product-roadmap-list {
+  li {
+    max-width: 100%;
+  }
+}
+
+// Label links
+
+%label-maturity {
+  //@include typeset("lang", "2xs", 4);
+  color: color("ink");
+  font-weight: font-weight("bold");
+  margin-left: units(1.5);
+  //position: absolute;
+  text-decoration: none;
+
+  //&#{$external-href}::after {
+  //  display: none;
+  //}
+}
+
+.label-alpha,
+.label-in-progress {
+  @extend %label-maturity;
+  background-color: color("gold-20v");
+}
+
+.label-beta,
+.label-next {
+  @extend %label-maturity;
+  background-color: color("primary-vivid");
+  color: color("white");
+}
+
+.label-upcoming {
+  @extend %label-maturity;
+  @include u-text("ls-1", "normal");
+  @include u-border("base-light", 1px);
+  color: color("base-dark");
+  background-color: color("transparent");
+}
+
+.label-recommended,
+.label-done {
+  @extend %label-maturity;
+  background-color: color("green-cool-20v");
+}
