--- a/layouts/section/roadmap.html
+++ b/layouts/section/roadmap.html
@@ -5,11 +5,11 @@
 <div class="maxw-tablet">
   <ul class="site-roadmap-list">
     {{ range $.Site.Data.roadmap.roadmap.categories}}
-    <li class="site-roadmap-list__item"><span class="flex-fill">{{ .name }}</span> <span class="usa-tag label-{{ .status | urlize }} flex-auto">{{ .status }}</span>
+    <li class="site-roadmap-list__item"><span class="flex-fill">{{ .name }}</span> <span class="usa-tag label-{{ .status | urlize | lower }} flex-auto">{{ .status }}</span>
       {{ if .things }}
       <ul class="site-roadmap-list__sublist">
         {{ range .things}}
-            <li class="site-roadmap-list__item"><span class="flex-fill">{{ .thing }}</span> <span class="usa-tag label-{{ .status | urlize }}">{{ .status }}</span></li>
+            <li class="site-roadmap-list__item"><span class="flex-fill">{{ .thing }}</span> <span class="usa-tag label-{{ .status | urlize  | lower }}">{{ .status }}</span></li>
         {{ end }}
       </ul>
       {{ end }}
