more roadmap content

--- a/themes/wdfn_theme/src/styles/main.scss
+++ b/themes/wdfn_theme/src/styles/main.scss
@@ -4,7 +4,7 @@ pre {
   overflow-y: scroll
 }
 
-// Grabbing bits and pieces of SCSS from the USGS website so that we can use their roadmap template
+// Grabbing bits and pieces of SCSS from the USWDS website so that we can use their roadmap template
 // source: https://github.com/uswds/uswds-site/blob/c74497541c96eb21f1f24484e35ec87b536728ed/css/_uswds-theme-custom-styles.scss
 
 .site-roadmap-list,
