--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
           </header>
           <div class="usa-card__media usa-card__media--inset">
             <div class="usa-card__img">
-              <img src="./static/water-availability/water-availability.png" alt="A placeholder image">
+              <img src="./static/water-availability/water-availability.png" alt="An image of the National Integrated Water Availability Assessments-Concept Map, showing different colors meaning different levels of water availability">
             </div>
           </div>
           <div class="usa-card__body">
