--- a/themes/wdfn_theme/layouts/partials/header.html
+++ b/themes/wdfn_theme/layouts/partials/header.html
@@ -64,6 +64,9 @@
                         <a class="usa-nav__link" href="{{ $.Site.BaseURL }}">Water Data Labs</a>
                     </li>
                     <li class="usa-nav__primary-item">
+                        <a class="usa-nav__link" href="{{ $.Site.BaseURL }}roadmap/index.html">Roadmap</a>
+                    </li>
+                    <li class="usa-nav__primary-item">
                         <a class="usa-nav__link" href="{{ $.Site.BaseURL }}about/index.html">About</a>
                     </li>
                 </ul>
