--- a/themes/wdfn_theme/src/styles/main.scss
+++ b/themes/wdfn_theme/src/styles/main.scss
@@ -1,4 +1,30 @@
-@import '../../node_modules/wdfn-viz/dist/sass/wdfnviz';
+@import '../../node_modules/wdfn-viz/dist/sass/theme';
+@import '../../node_modules/wdfn-viz/dist/sass/uswds';
+
+$usgs-blue: #00264c;
+
+@import '../../node_modules/wdfn-viz/dist/sass/partials/header';
+@import '../../node_modules/wdfn-viz/dist/sass/partials/footer';
+
+main {
+  //@include grid-container($theme-site-max-width);
+  //max-width: units($theme-site-max-width);
+  margin: 1em auto;
+  padding: 0 1em;
+}
+
+.usgs-content {
+  max-width: units($theme-site-max-width);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container_content {
+  @include grid-container($theme-site-max-width);
+  margin: 1em auto;
+  padding: 0 1em;
+}
+
 
 pre {
   overflow-y: scroll
@@ -92,3 +118,11 @@ pre {
   @extend %label-maturity;
   background-color: color("green-cool-20v");
 }
+
+// styling rapidoc
+.api_documentation {
+   @include u-width('full');
+   @include u-padding-x($theme-site-margins-width);
+   max-width: none;
+}
+
