--- a/layouts/section/api-docs.html
+++ b/layouts/section/api-docs.html
@@ -1,6 +1,26 @@
 {{ define "main" }}
   <div class="container_content">
     {{ .Content }}
+        <ul class="usa-card-group">
+          {{ range .RegularPages }}
+        <li class="tablet:grid-col-4 usa-card">
+          <div class="usa-card__container">
+            <header class="usa-card__header">
+              <a href="{{ .Permalink }}"><h2 class="usa-card__heading">{{ .Title }}</h2></a>
+            </header>
+             <div class="usa-card__media usa-card__media--inset">
+              <div class="usa-card__img">
+                <img src="{{ .Params.thumbnail_path }}" alt="{{ .Params.thumbnail_alt }}">
+              </div>
+            </div>
+            <div class="usa-card__body">
+              <p>{{ .Description }}</p>
+            </div>
+          </div>
+        </li>
+      {{ end }}
+
+    </ul>
   </div>
 {{ end }}
 
