Added a new parameter to the markdown which will allos the user to specify a class for the page content's container. This can be used to specify grid-container so that the page does not have full width of desktop but the standard width.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,5 @@
 {{ define "main" }}
-  <div class="container_content">
-
-
-
+  <div class="container_content grid-container">
     <h1>Welcome to Water Data Labs</h1>
     <p>Water Data Labs is an experimental  site that exposes tools and technologies in development by the USGS Water Data for the Nation software team.</p>
     <p>Users can explore and test experimental products on labs before they are incorporated into production systems. Some of the services, tools and visualizations that seen here will eventually make to the core <a href="https://waterdata.usgs.gov">waterdata.usgs.gov</a> or <a href="https://waterservices.usgs.gov">waterservices.usgs.gov</a> sites, but some may not.</p>
@@ -59,13 +56,6 @@
           </div>
         </li>
       {{ end }}
-
-
     </ul>
-
-
-
   </div>
-
-
 {{ end }}
