--- a/layouts/section/api-docs.html
+++ b/layouts/section/api-docs.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="container_content">
+  <div class="container-content grid-container">
     {{ .Content }}
         <ul class="usa-card-group">
           {{ range .RegularPages }}
