--- a/themes/wdfn_theme/layouts/_default/baseof.html
+++ b/themes/wdfn_theme/layouts/_default/baseof.html
@@ -51,7 +51,7 @@
 
   <body>
     {{ partial "header.html" . }}
-    <main>
+    <main id="main-content">
       {{ block "main" . }}{{ end }}
     </main>
     {{ partial "footer.html" . }}
