fix the headers

--- a/layouts/section/roadmap.html
+++ b/layouts/section/roadmap.html
@@ -30,17 +30,7 @@
     </ul>
   </div>
 
-  <h2>October 2020- September 2021 goals</h2>
-  <div class="maxw-tablet">
-    <ul class="site-roadmap-list__sublist">
-      {{ range $.Site.Data.roadmap.roadmap.next_year}}
-        <li class="site-roadmap-list__item"><span class="flex-fill">{{ . | markdownify }}</span></li>
-      {{ end }}
-    </ul>
-  </div>
-
-
-  <h2>October 2021- September 2022 goals</h2>
+  <h2>Future fiscal year goals (October 2022 and beyond)</h2>
   <div class="maxw-tablet">
     <ul class="site-roadmap-list__sublist">
       {{ range $.Site.Data.roadmap.roadmap.future_years}}
