Allow external URLs in template

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -28,7 +28,7 @@
         <li class="tablet:grid-col-4 usa-card">
           <div class="usa-card__container">
             <header class="usa-card__header">
-              <a href="{{ .Permalink }}"><h2 class="usa-card__heading">{{ .Title }}</h2></a>
+              <a href="{{ .Slug }}"><h2 class="usa-card__heading">{{ .Title }}</h2></a>
             </header>
              <div class="usa-card__media usa-card__media--inset">
               <div class="usa-card__img">
