--- a/layouts/section/roadmap.html
+++ b/layouts/section/roadmap.html
@@ -8,7 +8,10 @@
   <div class="maxw-tablet">
     <ul class="site-roadmap-list">
       {{ range $.Site.Data.roadmap.roadmap.categories}}
-      <li class="site-roadmap-list__item"><span class="flex-fill">{{ .name | markdownify }}</span> <span class="usa-tag label-{{ .status | urlize | lower }} flex-auto">{{ .status }}</span>
+      <li class="site-roadmap-list__item"><span class="flex-fill">{{ .name | markdownify }}</span>
+        {{ if .status }}
+          <span class="usa-tag label-{{ .status | urlize | lower }} flex-auto">{{ .status }}</span>
+        {{ end }}
         {{ if .things }}
         <ul class="site-roadmap-list__sublist">
           {{ range .things}}
